# Matlab-Engine-CMake-Demo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  compile.sh  main.cpp
